k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-data-simulator
  labels:
    app: axion-data-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axion-data-simulator
  template:
    metadata:
      labels:
        app: axion-data-simulator
    spec:
      containers:
        - name: axion-data-simulator
          image: rakeshacr01.azurecr.io/axion-data-simulator:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
