k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: axion-data-simulator
  labels:
    app: axion-data-simulator
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: axion-data-simulator
