k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axion-data-simulator-ingress
  annotations:
    konghq.com/plugins: rate-limiting-plugin, cors-plugin
spec:
  ingressClassName: kong
  rules:
    - host: simulator.axion.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: axion-data-simulator
                port:
                  number: 8080
